<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_avatar_empty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/profile_picture" />

    <Button
        android:id="@+id/pick_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_25_dp"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_image_button" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_25_dp"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_message_field_is_empty"
        android:textColor="@color/red"
        android:layout_margin="@dimen/margin_10_dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save"/>

    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10_dp"
        android:layout_marginEnd="@dimen/margin_10_dp"
        android:layout_marginBottom="@dimen/margin_10_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <include
        android:id="@+id/loader"
        layout="@layout/layout_loading"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>